--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
-    <link rel="stylesheet" href="/build/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 <h2>Try browsersync</h2>
-<p>c</p>
+<p>change no2</p>
 
-<script src="/build/js/script.js"></script>
+<script src="/js/script.js"></script>
 </body>
 </html>
