minor changes in index.html, main.scss

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,17 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-<h2>Try browsersync</h2>
-<p>change no2</p>
+<header class="header">
 
+</header>
+
+<main class="main">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, architecto cupiditate, dolorem doloremque esse eveniet hic id iure labore maiores minus officia praesentium quam repellendus soluta veniam voluptas? Consequatur, ratione?
+</main>
+
+<footer class="footer">
+
+</footer>
 <script src="/js/script.js"></script>
 </body>
 </html>
